--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,10 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    
+
+    - name: Set lowercase repo name
+      run: echo "REPO_NAME_LOWER=$(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
@@ -28,9 +31,9 @@ jobs:
         platforms: linux/amd64
         push: true
         tags: |
-          ${{ secrets.DOCKER_USERNAME }}/${{github.event.repository.name}}
-          ${{ secrets.DOCKER_USERNAME }}/${{github.event.repository.name}}:${{github.ref_name}}
-    
+          ${{ secrets.DOCKER_USERNAME }}/${{ env.REPO_NAME_LOWER }}
+          ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:${{ github.ref_name }}
+
     - name: Create Release
       uses: "marvinpinto/action-automatic-releases@latest"
       with:
