feat: extend wallet functionality and improve 2FA integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
 			"@databases/*": ["./database/*"],
 			"@translations/*": ["./app/translations/*"],
 			"@configs/*": ["./app/configs/*"],
-			"@app/*": ["./app/*"]
+			"@app/*": ["./app/*"],
+			"@wallet/*": ["./wallet/*"]
 		},
 		"typeRoots": ["app/**/types", "node_modules/@types"],
 		"plugins": [
