--- a/package.json
+++ b/package.json
@@ -73,8 +73,10 @@
 		"superstruct": "1.0.3",
 		"xhr-shim": "0.1.2",
 		"express": "^4.17.1",
-		"lowdb": "^1.0.0",
 		"localtunnel": "^2.0.2",
+		"lowdb": "^1.0.0",
+		"otplib": "^12.0.1",
+		"qrcode": "^1.5.3",
 		"telegraf": "^4.4.2"
 	},
 	"devDependencies": {
@@ -89,13 +91,13 @@
 		"jest-environment-jsdom": "28.1.3",
 		"jest-simple-dot-reporter": "1.0.5",
 		"tweetnacl": "1.0.3",
-		"pm2": "^4.5.6",
 		"@ptkdev/all-shields-cli": "^2.0.2",
-		"@types/jest": "^26.0.23",
 		"@types/express": "^4.17.13",
+		"@types/jest": "^26.0.23",
 		"@types/localtunnel": "^2.0.1",
 		"@types/lowdb": "^1.0.9",
 		"@types/node": "^15.0.1",
+		"@types/qrcode": "^1.5.5",
 		"@types/shelljs": "^0.8.8",
 		"@typescript-eslint/eslint-plugin": "^4.22.0",
 		"@typescript-eslint/parser": "^4.22.0",
@@ -108,6 +110,7 @@
 		"json": "^11.0.0",
 		"markserv": "^1.17.4",
 		"nodemon": "^2.0.7",
+		"pm2": "^4.5.6",
 		"prettier": "^2.2.1",
 		"replace-in-file": "^6.2.0",
 		"shelljs": "^0.8.4",
