--- a/package.json
+++ b/package.json
@@ -63,41 +63,39 @@
 		"asmcrypto.js": "2.3.2",
 		"buffer": "6.0.3",
 		"elliptic": "6.5.4",
+		"express": "^4.17.1",
 		"fast-text-encoding": "1.0.4",
 		"jayson": "3.6.6",
 		"js-crypto-hmac": "1.0.4",
+		"localtunnel": "^2.0.2",
 		"lossless-json": "1.0.5",
+		"lowdb": "^1.0.0",
+		"otplib": "^12.0.1",
 		"path-browserify": "^1.0.1",
+		"qrcode": "^1.5.3",
 		"randombytes": "2.1.0",
 		"sha3": "2.1.4",
 		"superstruct": "1.0.3",
-		"xhr-shim": "0.1.2",
-		"express": "^4.17.1",
-		"localtunnel": "^2.0.2",
-		"lowdb": "^1.0.0",
-		"otplib": "^12.0.1",
-		"qrcode": "^1.5.3",
-		"telegraf": "^4.4.2"
+		"telegraf": "^4.4.2",
+		"telegraf-session-local": "^2.1.1",
+		"xhr-shim": "0.1.2"
 	},
 	"devDependencies": {
+		"@ptkdev/all-shields-cli": "^2.0.2",
 		"@types/aes-js": "3.1.1",
 		"@types/crypto-js": "4.1.1",
 		"@types/elliptic": "6.4.14",
-		"@types/fast-text-encoding": "1.0.1",
-		"@types/lossless-json": "1.0.1",
-		"@types/path-browserify": "^1.0.0",
-		"@types/pbkdf2": "3.1.0",
-		"@types/randombytes": "2.0.0",
-		"jest-environment-jsdom": "28.1.3",
-		"jest-simple-dot-reporter": "1.0.5",
-		"tweetnacl": "1.0.3",
-		"@ptkdev/all-shields-cli": "^2.0.2",
 		"@types/express": "^4.17.13",
+		"@types/fast-text-encoding": "1.0.1",
 		"@types/jest": "^26.0.23",
 		"@types/localtunnel": "^2.0.1",
+		"@types/lossless-json": "1.0.1",
 		"@types/lowdb": "^1.0.9",
 		"@types/node": "^15.0.1",
+		"@types/path-browserify": "^1.0.0",
+		"@types/pbkdf2": "3.1.0",
 		"@types/qrcode": "^1.5.5",
+		"@types/randombytes": "2.0.0",
 		"@types/shelljs": "^0.8.8",
 		"@typescript-eslint/eslint-plugin": "^4.22.0",
 		"@typescript-eslint/parser": "^4.22.0",
@@ -107,6 +105,8 @@
 		"eslint-plugin-jsdoc": "^32.3.3",
 		"husky": "^6.0.0",
 		"jest": "^26.6.3",
+		"jest-environment-jsdom": "28.1.3",
+		"jest-simple-dot-reporter": "1.0.5",
 		"json": "^11.0.0",
 		"markserv": "^1.17.4",
 		"nodemon": "^2.0.7",
@@ -117,6 +117,7 @@
 		"ts-jest": "^26.5.5",
 		"ts-node": "^9.1.1",
 		"ts-patch": "^2.0.1",
+		"tweetnacl": "1.0.3",
 		"typescript": "^4.2.4",
 		"typescript-transform-paths": "^2.2.3",
 		"yargs": "^16.2.0"
