--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"fast-text-encoding": "1.0.4",
 		"jayson": "3.6.6",
 		"js-crypto-hmac": "1.0.4",
+		"kriya-dex-sdk": "^1.1.69",
 		"localtunnel": "^2.0.2",
 		"lossless-json": "1.0.5",
 		"lowdb": "^1.0.0",
@@ -97,6 +98,7 @@
 		"@types/qrcode": "^1.5.5",
 		"@types/randombytes": "2.0.0",
 		"@types/shelljs": "^0.8.8",
+		"@types/uuid": "^9.0.8",
 		"@typescript-eslint/eslint-plugin": "^4.22.0",
 		"@typescript-eslint/parser": "^4.22.0",
 		"all-contributors-cli": "^6.20.0",
